Fix overflow horizontal

--- a/index.css
+++ b/index.css
@@ -13,6 +13,7 @@
 
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 /* ===== TIPOGRAFÍA ===== */
@@ -21,6 +22,7 @@ body {
   background-color: #202020;
   color: #e4e4e4;
   line-height: 1.6;
+  overflow-x: hidden;
 }
 
 h1, h2, h3, h4, h5, h6,
@@ -249,6 +251,7 @@ nav a.activo {
 /* ===== SECCIONES ===== */
 section {
   padding: 7rem 0;
+  overflow: hidden;
 }
 
 .gris {
@@ -744,6 +747,7 @@ blockquote {
   align-items: center;
   justify-content: center;
   width: 100%;
+  overflow: hidden;
 }
 
 .carousel-3d-container {
